--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,19 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-content {
+    --background: none;
+    background-image: url('./assets/bg.jpg');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.list-md {
+    padding: 0px;
+}
+
+.recentMovies{
+    padding: 0px;
+}
